--- a/sense6bat/src/main/res/layout/button.xml
+++ b/sense6bat/src/main/res/layout/button.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_height="wrap_content"
-              android:layout_width="fill_parent"
-              android:weightSum="10"
-              android:baselineAligned="false" android:orientation="horizontal">
+
+<LinearLayout
+    android:orientation="horizontal"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
     <Button android:text="@string/doitbutton"
-            android:layout_width="fill_parent"
-            android:layout_weight="5"
-            android:layout_height="wrap_content"
-            android:id="@+id/startButton"
-            android:layout_gravity="left"
-            android:onClick="startUnpack">
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/startButton"
+        android:layout_centerInParent="true"
+        android:onClick="startUnpack"
+        android:gravity="center"
+        android:enabled="true"
+        android:layout_gravity="center">
     </Button>
 </LinearLayout>
